# claude-memory

./: .gitignore  README.md  pyproject.toml
claude_memory/: __init__.py  __main__.py  audit.py  brief_generator.py  memory_db.py
hooks/: context_check.js  context_check.sh  session_end.js  session_end.sh  statusline.js  statusline.sh
